# mongodb-session-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  test_application_name.py  test_cache_metrics.py  test_session_viewer_password.py  upgrade_python_3.14.md  viewer.txt
.claude/: .coding-rules-stamp.json  .workflow-guidelines-stamp.json
.claude/rules/: coding-api-design.md  coding-architecture.md  coding-caching.md  coding-checklist.md  coding-concurrency.md  coding-database.md  coding-dependencies.md  coding-efficiency.md  coding-errors.md  coding-observability.md  coding-python.md  coding-security.md  coding-testing.md  workflow-bugfix.md  workflow-contracts.md  workflow-dev-lifecycle.md  workflow-diagrams.md  workflow-docs.md  workflow-frontend-first.md  workflow-issue-driven.md  workflow-parallel.md  workflow-persistence.md  workflow-planning.md  workflow-release-ops.md  workflow-research.md  workflow-review.md  workflow-self-improvement.md  workflow-skills.md  workflow-subagents.md  workflow-tdd-pipeline.md  workflow-tdd.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  dev_environment.yml  documentation.yml  feature_request.yml  question.yml  task.yml
.github/workflows/: changelog.yml  ci.yml
.qlty/: qlty.toml
.specify/memory/: constitution.md
docs/: README.md  faq.md
docs/api-reference/: hooks.md  mongodb-connection-pool.md  mongodb-session-factory.md  mongodb-session-manager.md  mongodb-session-repository.md
docs/architecture/: data-model.md  design-decisions.md  overview.md  performance.md
docs/development/: contributing.md  releasing.md  setup.md  testing.md
docs/examples/: aws-patterns.md  basic-usage.md  fastapi-integration.md  feedback-patterns.md  metadata-patterns.md
docs/getting-started/: basic-concepts.md  installation.md  quickstart.md
docs/user-guide/: async-streaming.md  aws-integrations.md  connection-pooling.md  factory-pattern.md  feedback-system.md  guardrail-auditing.md  metadata-management.md  session-management.md
examples/: CaseType.py  README.md  example_agent_config.py  example_calculator_tool.py  example_fastapi.py  example_fastapi_streaming.py  example_feedback_hook.py  example_metadata_hook.py  example_metadata_production.py  example_metadata_tool.py  example_metadata_tool_direct.py  example_metadata_update.py  example_metadata_websocket.py  example_performance.py  session_context.py  tools_agent_state.py
features/1_agent_config_persistence/: plan.md  progress.md
features/2_session_viewer/: plan.md  progress.md
features/3_dynamic_index_filters/: plan.md  progress.md
playground/chat/: Makefile  chat-widget.js  chat.html
session_viewer/: Dockerfile  Dockerfile.aws  ENVIRONMENT.md
session_viewer/backend/: .env.example  Makefile  README.md  config.py  main.py  models.py  requirements.txt
session_viewer/frontend/: Makefile  README.md  components.js  generate_sri_hashes.sh  index.html  viewer.js
src/: __init__.py  mongodb_session_repository.py  session_cache.py
src/mongodb_session_manager/: __init__.py  mongodb_connection_pool.py  mongodb_session_factory.py  mongodb_session_manager.py  mongodb_session_repository.py
src/mongodb_session_manager/hooks/: __init__.py  feedback_sns_hook.py  metadata_sqs_hook.py  metadata_websocket_hook.py  utils_async.py  utils_sns.py  utils_sqs.py
tests/: conftest.py
tests/integration/: test_factory_integration.py  test_manager_integration.py  test_repository_integration.py
tests/unit/: test_connection_pool.py  test_hooks_feedback_sns.py  test_hooks_metadata_sqs.py  test_hooks_metadata_websocket.py  test_hooks_utils_sns.py  test_hooks_utils_sqs.py  test_session_factory.py  test_session_manager.py  test_session_repository.py
