[project]
name = "mongodb-session-manager"
version = "0.8.0"
description = "MongoDB session management for Strands Agents"
readme = "README.md"
requires-python = ">=3.12.8"
keywords = ["strands", "agents", "mongodb", "session", "management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "boto3>=1.42.0",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.16.0",
    "strands-agents>=1.30.0",
    "strands-agents-tools>=0.2.19",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=1.0.0",
]

[[project.authors]]
name = "Iñaki Guinea Beristain"
email = "iguinea@gmail.com"

[project.urls]
Homepage = "https://github.com/iguinea/mongodb-session-manager"
Documentation = "https://github.com/iguinea/mongodb-session-manager/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mongodb_session_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a real MongoDB connection",
    "slow: tests that take a long time to run",
]
addopts = "-v --tb=short"
